# mverse

./: .gitignore  ARCHITECTURE_VIOLATION.md  CAMERA_ORIENTATION_FIX.md  CHUNK_POSITION_FIX.md  CONTINUOUS_QUERIES_VOLUMETRIC_FIX.md  CURRENT_PROBLEMS.md  Cargo.toml  ELEVATION_STATUS.md  FLUID_DISCOVERY_DESIGN.md  MESH_RELAY_TESTING.md  NEXT_STEPS.md  NEXT_STEPS_OPTIONS.md  PHASE3_PLAN.md  PHONE_RELAY_WORKAROUND.md  README.md  REFERENCE_IMAGES.md  RUN_TERRAIN_TEST.md  RUN_VIEWER.md  SCALE_TEST_RESULTS.md  SCREENSHOT_SYSTEM_BROKEN.md  SESSION_SUMMARY_20260215.md  SESSION_SUMMARY_20260215_TERRAIN.md  SESSION_SUMMARY_BRIDGE_TUNNELS.md  SESSION_SUMMARY_SVO_WORKING.md  SESSION_SUMMARY_TERRAIN_WORKING.md  SRTM_DOWNLOADER_STATUS.md  SRTM_LOADING_ISSUE.md  SRTM_SOURCES_2026.md  SVO_PIPELINE_STATUS.md  TERRAIN_BUG_ANALYSIS.md  TERRAIN_FIX_PHASE1.md  TERRAIN_ISSUE_ANALYSIS.md  TERRAIN_RENDERING_BREAKTHROUGH.md  TERRAIN_RENDERING_WORKING.md  TEST_POSITIONS.md  TEST_RESULTS.md  VIEWER_FIX_COMPLETE.md  alice.key  bootstrap.json  bootstrap_cache.json  (+53 more)
.github/: github_copilot-instructions.md
archive/old-src-backup/: benchmarks.rs  cache.rs  chunk_manager.rs  coordinates.rs  elevation.rs  lib.rs  lod.rs  marching_cubes.rs  marching_cubes_tri_table.rs  materials.rs  mesh_generation.rs  osm.rs  osm_cache.rs  procedural_generator.rs  spatial_index.rs  svo_integration.rs.OLD  terrain.rs
archive/old-src-backup/renderer/: mod.rs
archive/old-src-backup/tests/: cache_tests.rs  chunk_tests.rs  coordinate_tests.rs  elevation_tests.rs  mod.rs  osm_tests.rs
archive/session-notes/: CHUNK_BOUNDARY_ISSUE.md  DIAGNOSIS.md  ELEVATION_DATUM_ISSUE.md  PHASE2_COMPLETE.md  PROFILING_RESULTS.md  README.md  REFERENCE_IMAGES_OLD.md  RENDERING_ANALYSIS.md  RENDERING_FIXED.md  SCREENSHOT_ANALYSIS.md  SCREENSHOT_SYSTEM_WORKING.md  SCREENSHOT_VALIDATION.md  SESSION_SUMMARY_VIEWER_COMPLETE.md  TERRAIN_RENDERING_STATUS.md  VALIDATION_COMPLETE.md  VIEWER_WORKING.md  VISUAL_FEEDBACK_SYSTEM.md  VISUAL_VALIDATION_COMPLETE.md
archive/temp-analysis/: SVO_CHUNK_ARCHITECTURE.md  TERRAIN_QUALITY_ANALYSIS.md  TEST_VOLUMETRIC_TERRAIN.md
archive/test-scripts/: capture_screenshots.sh  do-cleanup.sh  generate_screenshots.sh  run_screenshots.sh  run_viewer_real_terrain.sh  take_10_screenshots.sh
deploy/: README.txt  run_bob.sh  run_client.sh  run_relay.sh  update_binaries.sh
deploy/identities/: alice.key  bob.key  charlie.key  identity.key  peer1.key  peer2.key
docs/: ABSOLUTE_FOUNDATION.md  ADAPTIVE_CHUNK_SYSTEM.md  ANDROID_BUILD_GUIDE.md  ANDROID_RELAY_PRODUCTION.md  API_DESIGN.md  ASYNC_ARCHITECTURE.md  ASYNC_IMPLEMENTATION_COMPLETE.md  BOOTSTRAP_SCHEMA.md  BOOTSTRAP_SELF_HEALING_MECHANISM.md  BRIDGE_TUNNEL_SYSTEM.md  CHUNK_BASED_FILES_IMPLEMENTATION.md  CHUNK_INTEGRATION_PLAN.md  CHUNK_STREAMING_INTEGRATION.md  CLIFF_GENERATION_SCHEMATIC.md  CONTINUOUS_QUERIES_IMPL_LOG.md  CONTINUOUS_QUERIES_REALITY_CHECK.md  CONTINUOUS_WORLD_ARCHITECTURE.md  COORDINATE_SCALE_EVALUATION.md  CORRECT_LAUNCHER.md  DATA_DEPENDENCY_TREE.md  DATA_REQUIREMENTS.md  DECENTRALISED_PLATFORM.md  DEPLOYMENT_GUIDE.md  DISCOVERY_CLARIFICATIONS.md  DISTRIBUTED_SIMULATION_PROBLEM.md  DOC_ORGANIZATION.md  ENTITY_PRIORITY_NERVOUS_SYSTEM.md  FOUNDATION_COORDINATE_SYSTEM.md  FOUNDATION_IMPLEMENTATION_PLAN.md  FOUNDATION_WORK_PLAN.md  FULL_DATA_COMPLEXITY.md  GLOSSARY.md  GRACEFUL_DEGRADATION.md  HANDOVER.md  IDENTITY_SYSTEM.md  IMMEDIATE_FIXES_PROPOSAL.md  IMPLEMENTATION_SCOPE.md  IMPLEMENTATION_SUMMARY.md  LAUNCHER_REBUILD_PLAN.md  LAYER_SEPARATION_GUIDE.md  (+53 more)
docs/archive-old-branch/: ASYNC_TERRAIN_SOLUTION.md  CHUNK_SIZE_ANALYSIS.md  CODE_QUALITY_FIXES.md  CONTINUOUS_QUERIES_IMPL_LOG.md  CONTINUOUS_QUERIES_SPEC.md  DATA_INVENTORY.md  HOW_REAL_GAMES_HIDE_CHUNKS.md  LOD_HYSTERESIS_COMPLETE.md  LOD_STRATEGY.md  ORGANIC_TERRAIN_RESEARCH.md  TERRAIN_SYSTEM.md  VOLUMETRIC_ARCHITECTURE_REQUIRED.md  WHAT_I_ACTUALLY_LEARNED.md
examples/: auto_screenshot.rs  automated_screenshots.rs  capture_screenshots.rs  check_block_elevations.rs  check_building_heights.rs  check_coordinates.rs  check_index_contents.rs  check_osm_bounds.rs  check_osm_tile.rs  check_terrain_materials.rs  continuous_viewer.rs  continuous_viewer_async.rs  continuous_viewer_lod.rs  continuous_viewer_simple.rs  convert_brisbane_geotiff.rs  count_index_terrain.rs  debug_block_keys.rs  debug_blocks.rs  debug_chunk_coords.rs  debug_cube_to_sphere.rs  debug_elevation_data.rs  debug_floating_grass.rs  debug_generation.rs  debug_index.rs  debug_intersections.rs  debug_mesh.rs  debug_retrieved_block.rs  debug_single_block.rs  debug_world_manager.rs  download_brisbane_data.rs  download_brisbane_srtm.rs  identity_test.rs  metaverse_relay.rs  metaverse_server.rs  metaworld_alpha.rs  multi_screenshot.rs  phase1_multiplayer.rs  phase1_week1.rs  phase2_clean.rs  physics_demo.rs  (+39 more)
scripts/: build.sh  install.sh  release.sh
src/: adaptive_cache.rs  autoupdate.rs  bandwidth.rs  benchmarks.rs  billboard.rs  biome.rs  bootstrap.rs  cache.rs  chunk.rs  chunk_loader.rs  chunk_manager.rs  chunk_placeholder.rs  chunk_streaming.rs  chunks.rs  client_app.rs  construct.rs  continuous_world.rs  control_pack_merge.rs  coordinates.rs  elevation.rs  elevation_downloader.rs  elevation_old.rs  elevation_sources.rs  feature_record.rs  geotiff_converter.rs  http_tunnel.rs  identity.rs  key_registry.rs  lib.rs  marching_cubes.rs  marching_cubes_tri_table.rs  materials.rs  mesh.rs  mesh_generation.rs  meshsite.rs  messages.rs  multiplayer.rs  network.rs  network.rs.orig  node_capabilities.rs  (+36 more)
src/renderer/: camera.rs  frustum.rs  greedy_mesh.rs  mesh.rs  mod.rs  osm_shader.wgsl  pipeline.rs  shader.wgsl  shaders.rs  skybox.rs  textured_pipeline.rs  textured_shader.wgsl  water_shader.wgsl
src/tests/: chunk_tests.rs  coordinate_tests.rs  elevation_tests.rs  mod.rs  osm_tests.rs  svo_tests.rs
tests/: create_mock_srtm.py  download_srtm.py  test_cross_chunk_boundary.rs
tests/fixtures/: brisbane_cbd.json
world_data/: operations.json
world_data_alice/chunks/chunk_45100_44843_115846/: operations.json
(+3 files in other folders)
