[package]
name = "metaverse_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Phase 1: Coordinate system
geoconv = "0.1"  # GPS (lat/lon/alt) ↔ ECEF conversions, WGS84

# Phase 2: Elevation data
gdal = "0.18"  # GeoTIFF with random access for large files
gdal-sys = "0.11"  # GDAL system bindings

rayon = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"
tiff = "0.11"  # TIFF/GeoTIFF parsing for SRTM elevation data
serde_json = "1"
wgpu = { version = "24", features = ["wgsl"] }
winit = "0.30"
pollster = "0.4"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
zip = "0.6"

# Phase 3: Physics
rapier3d = { version = "0.22", features = ["debug-render", "serde-serialize"] }
noise = { version = "0.9.0", features = ["images"] }
png = "0.17"
image = "0.25"

# Continuous query system (Phase 1)
rstar = { version = "0.12", features = ["serde"] }  # R*-tree spatial index
lru = "0.12"  # LRU cache for warm cache tier

# Error handling
thiserror = "2.0"

# Phase 1.5: P2P Networking (Local-First Architecture)
# Core libp2p with essential transports and protocols
libp2p = { version = "0.56", features = [
    "tcp",              # TCP transport (primary)
    "noise",            # Noise protocol for encryption
    "yamux",            # Multiplexing protocol (stream muxer)
    "gossipsub",        # Pubsub for state sync (player positions, voxel ops)
    "kad",              # Kademlia DHT for peer discovery
    "mdns",             # mDNS for local network discovery
    "request-response", # Request/response protocol for chunk requests
    "identify",         # Peer identification protocol
    "ping",             # Keepalive and latency measurement
    "relay",            # Circuit relay for NAT traversal coordination
    "dcutr",            # Direct Connection Upgrade through Relay (hole punching)
    "macros",           # Convenience macros for Swarm
    "tokio",            # Async runtime integration
    "serde",            # Serialization support
] }

# Cryptographic identity (Ed25519 keypairs for peer IDs and signatures)
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }

# Additional networking utilities
libp2p-relay = { version = "0.18" }  # NAT traversal via relay nodes
libp2p-dcutr = { version = "0.12" }  # Direct Connection Upgrade through Relay (hole-punching)

# Async runtime (already have tokio, but ensure features are complete)
# (tokio already included above with full features)

# Random number generation (for nonces, testing)
rand = "0.8"

# Authenticated encryption for player state
chacha20poly1305 = "0.10"

# Message passing for async/sync bridge
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
shellexpand = "3"

