[package]
name = "metaverse_core"
version = "0.1.54"
edition = "2024"

[dependencies]
# Phase 1: Coordinate system
geoconv = { version = "0.1", optional = true }  # GPS (lat/lon/alt) ↔ ECEF conversions, WGS84

# Phase 2: Elevation data (optional for relay server)
gdal = { version = "0.18", optional = true }  # GeoTIFF with random access for large files
gdal-sys = { version = "0.11", optional = true }  # GDAL system bindings

rayon = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread", "signal"] }
futures = "0.3"
tiff = "0.11"  # TIFF/GeoTIFF parsing for SRTM elevation data
serde_json = "1"
wgpu = { version = "24", features = ["wgsl"], optional = true }
gltf = { version = "1", features = ["image", "guess_mime_type"], optional = true }
winit = { version = "0.30", optional = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }
pollster = "0.4"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
zip = "0.6"
flate2 = "1"

# Phase 3: Physics
rapier3d = { version = "0.22", features = ["debug-render", "serde-serialize"] }
noise = { version = "0.9.0", features = ["images"] }
png = "0.17"
image = "0.25"
font8x8 = "0.3"  # Embedded 8×8 bitmap font for billboard text rendering

# Continuous query system (Phase 1)
rstar = { version = "0.12", features = ["serde"] }  # R*-tree spatial index
osmpbfreader = "0.19"
lru = "0.12"  # LRU cache for warm cache tier

# Error handling
thiserror = "2.0"

# Phase 1.5: P2P Networking (Local-First Architecture)
# Core libp2p with essential transports and protocols
libp2p = { version = "0.56", features = [
    "tcp",              # TCP transport (primary)
    "quic",             # QUIC transport (better NAT traversal, faster handshake)
    "dns",              # DNS resolution (required for websocket)
    "websocket",        # WebSocket transport (port 443 fallback, firewall bypass)
    "tls",              # TLS encryption (required for WebSocket/WSS)
    "noise",            # Noise protocol for encryption
    "yamux",            # Multiplexing protocol (stream muxer)
    "gossipsub",        # Pubsub for state sync (player positions, voxel ops)
    "kad",              # Kademlia DHT for peer discovery
    "mdns",             # mDNS for local network discovery
    "request-response", # Request/response protocol for chunk requests
    "identify",         # Peer identification protocol
    "ping",             # Keepalive and latency measurement
    "relay",            # Circuit relay for NAT traversal coordination
    "dcutr",            # Direct Connection Upgrade through Relay (hole punching)
    "autonat",          # AutoNAT for detecting our own NAT status
    "macros",           # Convenience macros for Swarm
    "tokio",            # Async runtime integration
    "serde",            # Serialization support
] }

# Cryptographic identity (Ed25519 keypairs for peer IDs and signatures)
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }

# Additional networking utilities
libp2p-relay = { version = "0.18" }  # NAT traversal via relay nodes
libp2p-dcutr = { version = "0.12" }  # Direct Connection Upgrade through Relay (hole-punching)

# Async runtime (already have tokio, but ensure features are complete)
# (tokio already included above with full features)

# Random number generation (for nonces, testing)
rand = "0.8"

# HTTP fallback infrastructure
axum = "0.7"                          # HTTP server for relay endpoints
tower-http = { version = "0.5", features = ["cors", "trace"] }  # HTTP middleware
hyper = { version = "1.0", features = ["full"] }  # HTTP client/server
uuid = { version = "1.0", features = ["v4", "serde"] }  # Session IDs for HTTP tunnel

# Authenticated encryption for player state
chacha20poly1305 = "0.10"

# Message passing for async/sync bridge
crossbeam = "0.8"
async-trait = "0.1"  # Required for TileCodec implementing libp2p Codec trait
env_logger = "0.11"  # Logging for binaries
libc = "0.2"         # stdout redirect for TUI mode
hex = "0.4"          # Hex encoding for key cache file paths
base64 = "0.22"     # Base64 encoding for API key submission
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite key registry for server
rocksdb = { version = "0.22", features = ["zstd"] }     # Primary storage engine for tiles + world data
blake3 = "1"                                             # Fast checksum for tile/op integrity

[dev-dependencies]
tempfile = "3"
shellexpand = "3"


[features]
# Default features include terrain and full client functionality
default = ["terrain", "client"]

# Terrain features (GDAL for elevation data)
terrain = ["geoconv"]
# Enable GDAL for NAS-mounted global GeoTIFF support (optional, requires libgdal on the system)
terrain-gdal = ["gdal", "gdal-sys", "terrain"]

# Client features (rendering, etc)
client = ["wgpu", "winit", "egui", "egui-wgpu", "egui-winit", "dep:gltf"]

# Vendor OpenSSL for cross-compilation (builds from source instead of linking system OpenSSL)
vendored-openssl = ["openssl/vendored"]

# OpenSSL dependency
[dependencies.openssl]
version = "0.10"
features = ["vendored"]
optional = false

# CLI argument parsing for relay server
[dependencies.clap]
version = "4"
features = ["derive"]

# Terminal UI for relay dashboard
[dependencies.ratatui]
version = "0.29"

[dependencies.crossterm]
version = "0.28"
features = ["event-stream"]

# System metrics (CPU%, RAM%) for relay TUI
[dependencies.sysinfo]
version = "0.33"

[[bin]]
name = "metaverse-relay"
path = "src/bin/metaverse_relay.rs"
required-features = []  # Relay doesn't need terrain or client features

[[bin]]
name = "metaverse-server"
path = "src/bin/metaverse_server.rs"
required-features = []

[dependencies.zstd]
version = "0.13"
